Adjust page-main__content z-index to fix modal issue

--- a/sass/blocks/_boss-page-main.sass
+++ b/sass/blocks/_boss-page-main.sass
@@ -52,6 +52,7 @@ $block: ".boss-page-main"
   // $Page main container content
   &__content
     position: relative
+    z-index: 3
     display: flex
     flex-direction: column
     align-items: stretch
@@ -158,6 +159,25 @@ $block: ".boss-page-main"
     // $Page main container inner MOD: space regular
     &_space_regular
       padding: 25px 20px 30px
+
+    // $Page main container inner MOD: space large
+    &_space_large
+      padding: 40px 45px 50px
+
+      @media screen and (max-width: 1280px)
+        padding: 35px 40px 45px
+
+      @media screen and (max-width: 960px)
+        padding: 30px 35px 40px
+
+      @media screen and (max-width: 800px)
+        padding: 25px 30px 35px
+
+      @media screen and (max-width: 640px)
+        padding: 25px 25px 35px
+
+      @media screen and (max-width: 480px)
+        padding: 25px 20px 35px
 
 
   // $Page main container sidebar area
